BugzID: #23842 - Fix spacing around highlight section on single page campaigns

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -2676,7 +2676,7 @@ l div.addthis_toolbox a.addthis_button_google_plusone,.node-type-openpublish-pho
 }
 
 body.node-type-takepart-campaign #highlighted {
-    padding: 25px 0 25px;
+    padding-bottom: 20px;
 }
 
 body.multipage-campaign #highlighted {
